Fix UI alignments for mobile and search page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,7 @@
   --radius-4xl: calc(var(--radius) + 16px);
   --font-hind: "Hind Siliguri", sans-serif;
   --font-poppins: var(--font-poppins);
+  --font-lato: var(--font-lato);
 }
 
 :root {
